--- a/src/eco.bib
+++ b/src/eco.bib
@@ -1,3 +1,86 @@
+@article{Feng2020EstimationHeterogeneousIndividual,
+	title = {Estimation of {{Heterogeneous Individual Treatment Effects With Endogenous Treatments}}},
+	author = {Feng, Qian and Vuong, Quang and Xu, Haiqing},
+	year = {2020},
+	month = jan,
+	journal = {Journal of the American Statistical Association},
+	volume = {115},
+	number = {529},
+	pages = {231--240},
+	issn = {0162-1459, 1537-274X},
+	doi = {10.1080/01621459.2018.1543121},
+	urldate = {2025-10-27},
+	langid = {english},
+	file = {/home/vladislav/Insync/morenie@gmail.com/Google Drive/Econometrics Cloud/Articles/Systems/Triangular Systems/Feng et al. (2020) Estimation of Heterogeneous Individual Treatment Effects With Endogenous Treatments.pdf}
+}
+
+@book{Ramalho2022FluentPythonClear,
+  title = {Fluent {{Python}}: {{Clear}}, {{Concise}}, and {{Effective Programming}}},
+  shorttitle = {Fluent {{Python}}},
+  author = {Ramalho, Luciano},
+  year = 2022,
+  edition = {2nd edition},
+  publisher = {O'Reilly Media, Inc.},
+  address = {Sebastopol, California},
+  abstract = {Python's simplicity lets you become productive quickly, but often this means you aren't using everything it has to offer. With the updated edition of this hands-on guide, you'll learn how to write effective, modern Python 3 code by leveraging its best ideas. Don't waste time bending Python to fit patterns you learned in other languages. Discover and apply idiomatic Python 3 features beyond your past experience. Author Luciano Ramalho guides you through Python's core language features and libraries and teaches you how to make your code shorter, faster, and more readable},
+  isbn = {978-1-4920-5632-4},
+  langid = {english},
+  annotation = {OCLC: 1308979387}
+}
+
+@article{Ma2023InferenceIndividualTreatment,
+	title = {Inference on {{Individual Treatment Effects}} in {{Nonseparable Triangular Models}}},
+	author = {Ma, Jun and Marmer, Vadim and Yu, Zhengfei},
+	year = {2023},
+	month = aug,
+	journal = {Journal of Econometrics},
+	volume = {235},
+	number = {2},
+	pages = {2096--2124},
+	issn = {03044076},
+	doi = {10.1016/j.jeconom.2023.02.011},
+	urldate = {2025-10-27},
+	abstract = {In nonseparable triangular models with a binary endogenous treatment and a binary instrumental variable, Vuong and Xu (2017) established identification results for individual treatment effects (ITEs) under the rank invariance assumption. Using their approach, Feng et al. (2019) proposed a uniformly consistent kernel estimator for the density of the ITE that utilizes estimated ITEs. In this paper, we establish the asymptotic normality of the density estimator of Feng et al. (2019) and show that the ITE estimation errors have a non-negligible effect on the asymptotic distribution of the estimator. We propose asymptotically valid standard errors that account for ITEs estimation, as well as a bias correction. Furthermore, we develop uniform confidence bands for the density of the ITE using the jackknife multiplier or nonparametric bootstrap critical values.},
+	langid = {english},
+	file = {/home/vladislav/Insync/morenie@gmail.com/Google Drive/Econometrics Cloud/Articles/Systems/Triangular Systems/Ma et al. (2023) Inference on individual treatment effects in nonseparable triangular models.pdf}
+}
+
+@article{Vuong2017CounterfactualMappingIndividual,
+	title = {Counterfactual {{Mapping}} and {{Individual Treatment Effects}} in {{Nonseparable Models With Binary Endogeneity}}},
+	shorttitle = {Counterfactual Mapping and Individual Treatment Effects in Nonseparable Models with Binary Endogeneity},
+	author = {Vuong, Quang and Xu, Haiqing},
+	year = {2017},
+	month = jul,
+	journal = {Quantitative Economics},
+	volume = {8},
+	number = {2},
+	pages = {589--610},
+	issn = {17597323},
+	doi = {10.3982/QE579},
+	urldate = {2025-10-27},
+	copyright = {http://doi.wiley.com/10.1002/tdm\_license\_1.1},
+	langid = {english},
+	file = {/home/vladislav/Insync/morenie@gmail.com/Google Drive/Econometrics Cloud/Articles/Systems/Triangular Systems/Vuong and Xu (2017) Counterfactual Mapping and Individual Treatment Effects in Nonseparable Models With Binary Endogenei.pdf}
+}
+
+@misc{Ma2025InferenceDistributionIndividual,
+	title = {Inference on the {{Distribution}} of {{Individual Treatment Effects}} in {{Nonseparable Triangular Models}}},
+	author = {Ma, Jun and Marmer, Vadim and Yu, Zhengfei},
+	year = {2025},
+	month = sep,
+	number = {arXiv:2509.15401},
+	eprint = {2509.15401},
+	primaryclass = {econ},
+	publisher = {arXiv},
+	doi = {10.48550/arXiv.2509.15401},
+	urldate = {2025-10-27},
+	abstract = {In this paper, we develop inference methods for the distribution of heterogeneous individual treatment effects (ITEs) in the nonseparable triangular model with a binary endogenous treatment and a binary instrument of Vuong and Xu (2017) and Feng, Vuong, and Xu (2019). We focus on the estimation of the cumulative distribution function (CDF) of the ITE, which can be used to address a wide range of practically important questions such as inference on the proportion of individuals with positive ITEs, the quantiles of the distribution of ITEs, and the interquartile range as a measure of the spread of the ITEs, as well as comparison of the ITE distributions across sub-populations. Moreover, our CDF-based approach can deliver more precise results than density-based approach previously considered in the literature. We establish weak convergence to tight Gaussian processes for the empirical CDF and quantile function computed from nonparametric ITE estimates of Feng, Vuong, and Xu (2019). Using those results, we develop bootstrap-based nonparametric inferential methods, including uniform confidence bands for the CDF and quantile function of the ITE distribution.},
+	archiveprefix = {arXiv},
+	keywords = {Economics - Econometrics,Statistics - Methodology},
+	file = {/home/vladislav/Zotero/storage/5CB6QK8A/Ma et al. (2025) Inference on the Distribution of Individual Treatment Effects in Nonseparable Triangular Models.pdf;/home/vladislav/Zotero/storage/UGUNGE9U/2509.html}
+}
+
+
 @book{Alley2013CraftScientificPresentations,
   title = {The {{Craft}} of {{Scientific Presentations}}: {{Critical Steps}} to {{Succeeed}} and {{Critical Errors}} to {{Avoid}}},
   shorttitle = {The Craft of Scientific Presentations},
