--- a/src/slides/general-principles/code-organization.qmd
+++ b/src/slides/general-principles/code-organization.qmd
@@ -95,7 +95,7 @@ THEME_COLOR = "#3c165c"
 
 #### Reminder: Studying OLS Bias
 
-Recall: studied <span class="highlight">bias of OLS estimator</span> in simple linear model:
+Recall: so far in this block studied <span class="highlight">bias of OLS estimator</span> in simple linear model:
 
 $$
 Y_{t} = \beta_0 + \beta_1 X + U_t, \quad t=1, \dots, T
@@ -284,8 +284,8 @@ class SimulationRunner:
     """Runs Monte Carlo simulations for a given DGP and estimator.
 
     Attributes:
-        dgp: Data-generating process with a `sample` method.
-        estimator: Estimator with a `fit` method and `beta1_hat` attribute.
+        dgp: Data-generating process with a sample method.
+        estimator: Estimator with a fit method and beta1_hat attribute.
         errors: array of estimation errors (beta1_hat - beta1) for each simulation.
     """
 
@@ -297,8 +297,8 @@ class SimulationRunner:
         """Initializes the simulation runner.
 
         Args:
-            dgp: An instance of a DGP class (must implement `sample`).
-            estimator: An instance of an estimator class (must implement `fit`).
+            dgp: An instance of a DGP class (must implement sample).
+            estimator: An instance of an estimator class (must implement fit).
         """
         self.dgp = dgp
         self.estimator = estimator
@@ -330,6 +330,12 @@ class SimulationRunner:
         print(f"Average estimation error (bias): {np.mean(self.errors):.4f}")
 ```
 
+
+::: {.footer}
+
+Notice the type hintsfor `dgp` and `estimator`
+
+:::
 
 
 
@@ -379,7 +385,7 @@ $$
 Implement ridge with same interface as `SimpleOLS`:
 ```{python}
 #| echo: true
-#| code-line-numbers: "1,10,14,16,27"
+#| code-line-numbers: "1,10,13,14,16,27"
 class SimpleRidge:
     """A simple ridge estimator for the linear model y = beta0 + beta1*x + u.
 
@@ -499,14 +505,14 @@ A smaller but annoying problem:
 
 . . .
 
-![Figure: Issue raised by Pylance](../../images/code-screenshots/ridge-pylance.png)
+![Figure: code problem raised by Pylance/Pyright](../../images/code-screenshots/ridge-pylance.png)
 
 
 #### Solution: Protocols  
 
 Python [protocols](https://typing.python.org/en/latest/spec/protocol.html) allow us to: 
 
-- Express that every estimator should have `fit()` and `beta1_hat`
+- Express that `SimulationRunner` expects estimators to have `fit()` and `beta1_hat`
 - Capture in one place the expectations for our estimators (and DGPs)
 - Type hint this 
 
@@ -582,7 +588,7 @@ Protocols communicate information about interfaces both to readers and type chec
 
 </div>
 
-To use them modify `SimulationRunner` constructor:
+Now modify `SimulationRunner` to make this explicit:
 
 - Insert `DGPProtocol` as type hint for `dgp` argument
 - Insert `EstimatorProtocol` as type hint for `estimator` argument
@@ -711,7 +717,7 @@ Not a problem: can wrap it in a compatible manner
 
 #### Point of This Section
 
-Why are we discussing this?
+Why are we discussing this lasso example?
  
 
 <br>
@@ -724,20 +730,45 @@ Three reasons:
 - Seeing another new estimator
 
 #### A Look at `scikit-learn` Lasso
+ 
 
-In general, would use Lasso like this
+In general, would use `scikit-learn` Lasso somewhat like this:
 ```{python}
-
+#| echo: true
+from sklearn.linear_model import Lasso
+x, y = static_dgp.sample(5000)
+x = x.reshape(-1, 1)           # scikit-learn expects 2D arrays
+lasso_est = Lasso(alpha=0.05)  # alpha - regularization parameter
+lasso_est.fit(x, y);
 ```
+
+. . . 
+
+
+Now can `predict()` ("intended" usage of `scikit-learn)` or access estimated coefficients (what we need):
+```{python}
+#| echo: true
+print(f"Estimates: beta0: {lasso_est.intercept_:.3f}; estimated beta1: {lasso_est.coef_[0]:.3f}")
+```
+
+. . .
+
+<div class="left-color">
+
+`Lasso` has different interface: `fit()` expects 2d array (before we had 1d); estimates stored in `intercept_` and `coef_` 
+
+</div>
 
 #### Lasso Wrapper Implementation
 
+Wrapper class that aligns `Lasso` with `EstimatorProtocol`:
 ```{python}
 #| echo: true
 from sklearn.linear_model import Lasso as SklearnLasso 
 
 class LassoWrapper:
-    """A wrapper for scikit-learn's Lasso estimator to match the EstimatorProtocol interface.
+    """A wrapper for scikit-learn's Lasso estimator to match the EstimatorProtocol interface
+    for model y = beta0 + beta1*x+u.
 
     Attributes:
         model (sklearn.linear_model.Lasso): a scikit-learn Lasso instance.
@@ -771,29 +802,38 @@ class LassoWrapper:
 
 #### Lasso Wrapper in Action
 
+Now works like `SimpleRidge`:
 ```{python}
-#| echo: true
-# Initialize DGP and estimator
-static_dgp = StaticNormalDGP(beta0=0.0, beta1=0.5)
-# Estimators
-lasso_weak = LassoWrapper(reg_param=0.01)
+#| echo: true 
+#| code-line-numbers: ""
+# Estimators 
 lasso_strong = LassoWrapper(reg_param=100)
-
-# Initialize and run simulations
-sim_lasso_weak = SimulationRunner(static_dgp, lasso_weak)
+# Simulations and results  
 sim_lasso_strong = SimulationRunner(static_dgp, lasso_strong)
-sim_lasso_weak.simulate(n_sim=1000, n_obs=50, first_seed=1)
-sim_lasso_strong.simulate(n_sim=1000, n_obs=50, first_seed=1)
-# Summarize bias 
-sim_lasso_weak.summarize_bias()
+sim_lasso_strong.simulate(n_sim=1000, n_obs=50, first_seed=1) 
 sim_lasso_strong.summarize_bias() 
+print(f"Variance of estimation error: {sim_lasso_strong.errors.var()}")
 ```
  
+<div class="left-color">
 
-#### Discussion
+Statistical conclusion: strong regularization totally kills $\beta_1$: always have $\hat{\beta}^{Lasso}_1=0$
 
-"Remember how we had to update type hints for Ridge? With protocols, we don’t need to change SimulationRunner to add Lasso!"
-"This is why protocols are better than concrete classes in type hints."
+</div>
+
+#### Adding Lasso: Discussion
+
+On protocols:
+
+- Our `LassoWrapper` conforms to the `EstimationProtocol`
+- $\Rightarrow$ didn't need to change `SimulationRunner` at all, all of its docs and type hints are valid
+- Can now freely add as many estimators and DGPs as necessary without touching core logic
+
+. . . 
+
+On the wrapper:
+
+- A technique for making use of external implementations 
 
 ## Organizing Files {background="#00100F"}
  
@@ -801,6 +841,12 @@ sim_lasso_strong.summarize_bias()
 
 ### Splitting Code Appropriately {background="#43464B"}
 
+#### A Recap
+
+- Three estimators 
+- Two DGPs
+- Two protocols
+- One simulation runner
 
 #### Modules
 
