--- a/src/slides/general-principles/code-organization.qmd
+++ b/src/slides/general-principles/code-organization.qmd
@@ -626,7 +626,7 @@ class SimulationRunner:
         """
         self.dgp: DGPProtocol = dgp
         self.estimator: EstimatorProtocol = estimator
-        self.errors: np.ndarray | None = None
+        self.errors: np.ndarray = np.empty(0)
 
     def simulate(self, n_sim: int, n_obs: int, first_seed: int | None = None) -> None:
         """Runs simulations and stores estimation errors.
@@ -883,9 +883,11 @@ Notebooks are great for exploration, but:
 - Difficult to reuse code across projects
 - No clear entry point for running simulations
 
+<br>
+
 <div class="left-color">
 
-Modules + scripts = better for production and collaboration
+Modules + scripts = better for  production and collaboration
 
 </div>
 
@@ -950,10 +952,120 @@ See chapter 24 in @Lutz2025LearningPythonPowerful about `__init__.py`
 Group OLS-like estimator class definitions together:
 
 ```{.python filename="estimators/ols-like.py"} 
-# here our current estimators
+"""
+Module for OLS-like estimators.
+
+This module contains classes for estimating simple model
+    y = b0 + b1 * x + u
+with OLS-like methods. All estimators implement the EstimatorProtocol interface.
+
+Classes:
+    SimpleOLS: ordinary least squares estimator.
+    SimpleRidge: ridge regression estimator.
+    LassoWrapper: wrapper for scikit-learn's Lasso estimator.
+"""
+
+import numpy as np
+from sklearn.linear_model import Lasso as SklearnLasso
+
+
+class SimpleOLS:
+    """A simple OLS estimator for the linear model y = beta0 + beta1*x + u.
+
+    Attributes:
+        beta0_hat (float): Estimated intercept. NaN until fit is called.
+        beta1_hat (float): Estimated slope. NaN until fit is called.
+    """
+
+    def __init__(self) -> None:
+        """Initializes the OLS estimator with no estimates."""
+        self.beta0_hat: float = np.nan
+        self.beta1_hat: float = np.nan
+
+    def fit(self, x: np.ndarray, y: np.ndarray) -> None:
+        """Fit OLS to the provided data.
+
+        Args:
+            x (np.ndarray): Independent variable (1D array).
+            y (np.ndarray): Dependent variable (1D array).
+        """
+
+        # Add constant to x
+        X = np.column_stack([np.ones(len(x)), x])
+        # OLS estimation
+        beta_hat = np.linalg.inv(X.T @ X) @ X.T @ y
+        self.beta0_hat, self.beta1_hat = beta_hat[0], beta_hat[1]
+
+
+class SimpleRidge:
+    """A simple ridge estimator for the linear model y = beta0 + beta1*x + u.
+
+    Attributes:
+        beta0_hat (float): Estimated intercept. NaN until fit is called.
+        beta1_hat (float): Estimated slope. NaN until fit is called.
+        reg_param (float): Strength of regularization. Defaults to 0.01.
+    """
+
+    def __init__(self, reg_param: float = 0.01) -> None:
+        """Initializes the OLS estimator with no estimates."""
+        self.beta0_hat: float = np.nan
+        self.beta1_hat: float = np.nan
+        self.reg_param = reg_param
+
+    def fit(self, x: np.ndarray, y: np.ndarray) -> None:
+        """Fits the ridge estimator to the provided data.
+
+        Args:
+            x (np.ndarray): Independent variable (1D array).
+            y (np.ndarray): Dependent variable (1D array).
+        """
+
+        # Add constant to x
+        X = np.column_stack([np.ones(len(x)), x])
+        # OLS estimation
+        beta_hat = np.linalg.inv(X.T @ X + self.reg_param * np.eye(2)) @ X.T @ y
+        self.beta0_hat, self.beta1_hat = beta_hat[0], beta_hat[1]
+
+
+class LassoWrapper:
+    """A wrapper for scikit-learn's Lasso to match the EstimatorProtocol.
+    Model y = beta0 + beta1*x+u.
+
+    Attributes:
+        model (sklearn.linear_model.Lasso): a scikit-learn Lasso instance.
+        beta0_hat (float): Estimated intercept. Initialized as np.nan.
+        beta1_hat (float): Estimated slope. Initialized as np.nan.
+    """
+
+    def __init__(self, reg_param: float = 1.0) -> None:
+        """Initializes the Lasso wrapper with a scikit-learn Lasso model.
+
+        Args:
+            reg_param (float): Regularization strength (alpha). Defaults to 1.0.
+        """
+        self.model = SklearnLasso(alpha=reg_param)
+        self.beta0_hat: float = np.nan
+        self.beta1_hat: float = np.nan
+
+    def fit(self, x: np.ndarray, y: np.ndarray) -> None:
+        """Fits the Lasso model to the provided data.
+
+        Args:
+            x (np.ndarray): Independent variable (1D array).
+            y (np.ndarray): Dependent variable (1D array).
+        """
+        x = x.reshape(-1, 1)  # sklearn expects 2d array inputs
+        self.model.fit(x, y)
+        self.beta0_hat = float(self.model.intercept_)
+        self.beta1_hat = float(self.model.coef_[0])
+
 ```
 
 
+::: {.footer}
+
+
+:::
 
 
 #### Reminder: Importing From Modules
